[package]
name = "ploudos-mod-bot"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
color-eyre = "0.6.2"
poise = { git = "https://github.com/serenity-rs/poise/" }
phf = "0.11"
humantime = "2.1.0"
levenshtein = "1.0.5"
regex = "1.10.2"
once_cell = "1.18.0"

[build-dependencies]
serde = { version = "1.0.189", features = ["derive"] }
phf = { version = "0.11", default-features = false }
phf_codegen = "0.11"
serde_json = "1.0.107"
