[package]
name = "ploudos-mod-bot"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
poise = "0.6.1"
phf = "0.11"
humantime = "2.1.0"
levenshtein = "1.0.5"
regex = "1.10.4"
once_cell = "1.19.0"
shuttle-runtime = "0.45.0"
anyhow = "1.0.86"
shuttle-serenity = "0.45.0"

[build-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
phf = { version = "0.11", default-features = false }
phf_codegen = "0.11"
serde_json = "1.0.117"
