[package]
name = "ploudos-mod-bot"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
poise = "0.6.1"
phf = "0.11"
humantime = "2.1.0"
levenshtein = "1.0.5"
regex = "1.11.1"
once_cell = "1.20.2"
shuttle-runtime = "0.51.0"
anyhow = "1.0.95"
shuttle-serenity = "0.51.0"

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
phf = { version = "0.11", default-features = false }
phf_codegen = "0.11"
serde_json = "1.0.138"
